<!--
  ~ onprom
  ~
  ~ pom.xml
  ~
  ~ Copyright (C) 2016-2019 Free University of Bozen-Bolzano
  ~
  ~ This product includes software developed under
  ~ KAOS: Knowledge-Aware Operational Support project
  ~ (https://kaos.inf.unibz.it).
  ~
  ~ Please visit https://onprom.inf.unibz.it for more information.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>it.unibz.inf.kaos</groupId>
    <artifactId>onprom</artifactId>
    <version>2.4.0</version>
    <packaging>pom</packaging>
    <name>onprom - Parent Project of onprom Tools</name>
    <url>https://onprom.inf.unibz.it</url>
    <organization>
        <name>KRDB - Free University of Bozen-Bolzano</name>
        <url>https://www.inf.unibz.it/krdb/</url>
    </organization>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <scm>
        <connection>scm:git:git@github.com:onprom/onprom.git</connection>
        <developerConnection>scm:git:git@github.com:onprom/onprom.git</developerConnection>
        <url>git@github.com:onprom/onprom.git</url>
        <tag>${project.version}</tag>
    </scm>
    <developers>
        <developer>
            <id>ghxiao</id>
            <name>G. XIAO</name>
        </developer>
        <developer>
            <id>jxiong</id>
            <name>J. XIONG</name>
        </developer>
        <developer>
            <id>tekrei</id>
            <name>T. E. KALAYCI</name>
        </developer>
        <developer>
            <id>ariosantoso</id>
            <name>A. SANTOSO</name>
        </developer>
    </developers>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <logback.version>1.2.10</logback.version>
        <jaxb.version>2.3.1</jaxb.version>
        <maven.assembly.version>3.3.0</maven.assembly.version>
        <owlapi.version>4.5.19</owlapi.version>
        <ontop.version>4.2.0</ontop.version>
        <local.repository>file://${basedir}/../onprom-maven</local.repository>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.9.0</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>onprom-data</module>
        <module>onprom-umleditor</module>
        <module>onprom-annoeditor</module>
        <module>onprom-dynamiceditor</module>
        <module>onprom-obdamapper</module>
        <module>onprom-logextractor</module>
        <module>onprom-ocel</module>
        <module>onprom-toolkit</module>
        <module>onprom-plugin</module>
    </modules>
    <repositories>
        <repository>
            <id>onprom-maven</id>
            <name>onprom Maven Repository</name>
            <url>${local.repository}</url>
        </repository>
    </repositories>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
    </dependencies>
</project>
